--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -29,39 +29,39 @@ SUBDIRS += reference
 endif
 
 invoke-gnutls-cli.texi: ../src/cli-args.def
-	-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
+	@-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
 	mv -f ../src/$@ ../doc
 
 invoke-gnutls-cli-debug.texi: ../src/cli-debug-args.def
-	-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
+	@-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
 	mv -f ../src/$@ ../doc
 
 invoke-gnutls-serv.texi: ../src/serv-args.def
-	-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
+	@-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
 	mv -f ../src/$@ ../doc
 
 invoke-certtool.texi: ../src/certtool-args.def
-	-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
+	@-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
 	mv -f ../src/$@ ../doc
 
 invoke-srptool.texi: ../src/srptool-args.def
-	-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
+	@-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
 	sed -i 's/@subsection/@subsubsection/g' $@ && \
 	sed -i 's/@section/@subsection/g' $@ && \
 	mv -f ../src/$@ ../doc
 
 invoke-ocsptool.texi: ../src/ocsptool-args.def
-	-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
+	@-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
 	mv -f ../src/$@ ../doc
 
 invoke-psktool.texi: ../src/psk-args.def
-	-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
+	@-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
 	sed -i 's/@subsection/@subsubsection/g' $@ && \
 	sed -i 's/@section/@subsection/g' $@ && \
 	mv -f ../src/$@ ../doc
 
 invoke-p11tool.texi: ../src/p11tool-args.def
-	-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
+	@-cd ../src/ && autogen -Tagtexi-cmd.tpl $< && \
 	sed -i 's/@subsection/@subsubsection/g' $@ && \
 	sed -i 's/@section/@subsection/g' $@ && \
 	mv -f ../src/$@ ../doc
