--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1665,6 +1665,13 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
                                              const char* service,
                                              time_t expiration,
                                              const gnutls_datum_t* pubkey);
+
+  typedef int (*gnutls_trust_db_store_commitment_func) (const char* db_name, 
+                                             const char* host,
+                                             const char* service,
+                                             time_t expiration,
+                                             gnutls_digest_algorithm_t hash_algo,
+                                             const char* hash);
   
   /* searches for the provided host/service pair that match the
    * provided public key in the database. */
@@ -1675,6 +1682,7 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   
   typedef struct {
     gnutls_trust_db_store_func store;
+    gnutls_trust_db_store_commitment_func cstore;
     gnutls_trust_db_retr_func retrieve;
   } trust_storage_st;
 
@@ -1684,6 +1692,15 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
                             const char* service,
                             gnutls_certificate_type_t cert_type,
                             const gnutls_datum_t * cert, unsigned int flags);
+
+  int gnutls_store_commitment(const char* db_name,
+                    const trust_storage_st * tdb,
+                    const char* host,
+                    const char* service,
+                    gnutls_digest_algorithm_t hash_algo,
+                    const char* hash,
+                    time_t expiration,
+                    unsigned int flags);
 
   int gnutls_store_pubkey(const char* db_name,
                     const trust_storage_st * tdb,
