Added missing functions.

--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -123,6 +123,7 @@ APIMANS += gnutls_pcert_import_x509_raw.3
 APIMANS += gnutls_pcert_import_openpgp_raw.3
 APIMANS += gnutls_pcert_import_openpgp.3
 APIMANS += gnutls_pcert_deinit.3
+APIMANS += gnutls_certificate_set_retrieve_function2.3
 APIMANS += gnutls_certificate_set_key.3
 APIMANS += gnutls_sign_callback_set.3
 APIMANS += gnutls_sign_callback_get.3
@@ -180,6 +181,7 @@ APIMANS += gnutls_dtls_set_timeouts.3
 APIMANS += gnutls_dtls_get_mtu.3
 APIMANS += gnutls_dtls_get_data_mtu.3
 APIMANS += gnutls_dtls_set_mtu.3
+APIMANS += gnutls_dtls_get_timeout.3
 APIMANS += gnutls_dtls_cookie_send.3
 APIMANS += gnutls_dtls_cookie_verify.3
 APIMANS += gnutls_dtls_prestate_set.3
@@ -412,6 +414,7 @@ APIMANS += gnutls_anon_set_params_function.3
 APIMANS += gnutls_psk_set_params_function.3
 APIMANS += gnutls_hex2bin.3
 APIMANS += gnutls_verify_stored_pubkey.3
+APIMANS += gnutls_store_commitment.3
 APIMANS += gnutls_store_pubkey.3
 APIMANS += gnutls_ocsp_req_init.3
 APIMANS += gnutls_ocsp_req_deinit.3
