Added new functions

--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -413,6 +413,11 @@ APIMANS += gnutls_certificate_set_params_function.3
 APIMANS += gnutls_anon_set_params_function.3
 APIMANS += gnutls_psk_set_params_function.3
 APIMANS += gnutls_hex2bin.3
+APIMANS += gnutls_tdb_init.3
+APIMANS += gnutls_tdb_set_store_func.3
+APIMANS += gnutls_tdb_set_store_commitment_func.3
+APIMANS += gnutls_tdb_set_verify_func.3
+APIMANS += gnutls_tdb_deinit.3
 APIMANS += gnutls_verify_stored_pubkey.3
 APIMANS += gnutls_store_commitment.3
 APIMANS += gnutls_store_pubkey.3
