Added GCM mode using cryptodev. This is mostly a hack due to how GCM mode is exported from kernel.

--- a/lib/accelerated/Makefile.am
+++ b/lib/accelerated/Makefile.am
@@ -35,7 +35,7 @@ endif
 noinst_LTLIBRARIES = libaccelerated.la
 
 EXTRA_DIST = accelerated.h cryptodev.h
-libaccelerated_la_SOURCES = accelerated.c cryptodev.c
+libaccelerated_la_SOURCES = accelerated.c cryptodev.c cryptodev-gcm.c
 libaccelerated_la_LIBADD =
 
 if ASM_X86
