updated libopts check

--- a/configure.ac
+++ b/configure.ac
@@ -148,7 +148,7 @@ fi
 AM_CONDITIONAL(ENABLE_PKCS11, test "$with_p11_kit" != "no")
 
 dnl Checks for programs in src/ 
-PKG_CHECK_MODULES([libopts], libopts >= 36.2.11,, [enable_local_libopts=yes])
+PKG_CHECK_MODULES([autoopts], autoopts >= 36.2.11,, [enable_local_libopts=yes])
 
 NEED_LIBOPTS_DIR=true
 LIBOPTS_CHECK([src/libopts])
@@ -504,6 +504,7 @@ if features are disabled)
 AC_MSG_NOTICE([Optional applications:
 
   crywrap app:      $libidn
+  local libopts:    $enable_local_libopts
 ])
 
 AC_MSG_NOTICE([Optional libraries:
