use valgrind only on development environment.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -105,7 +105,7 @@ TESTS_ENVIRONMENT =						\
 	EXEEXT=$(EXEEXT)					\
 	srcdir="$(srcdir)"
 
-if !WINDOWS
+if WANT_TEST_SUITE
 TESTS_ENVIRONMENT +=						\
 	$(VALGRIND)
 endif
