valgrind only used in development environment

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -97,5 +97,8 @@ TESTS_ENVIRONMENT =						\
 	PKCS12FILE_2=$(srcdir)/pkcs12-decode/pkcs12_2certs.p12	\
 	PKCS12PASSWORD_2=""					\
 	EXEEXT=$(EXEEXT)					\
-	srcdir="$(srcdir)"					\
-	$(VALGRIND)
+	srcdir="$(srcdir)"
+
+if WANT_TEST_SUITE
+TESTS_ENVIRONMENT += $(VALGRIND)
+endif
