corrected version replacement in .texi.

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,7 +38,7 @@ dist-hook:
 	make ChangeLog
 	cp -f ChangeLog $(distdir)/
 	sed 's/\@VERSION\@/$(VERSION)/g' -i $(distdir)/src/args-std.def
-	sed 's/\@VERSION\@/$(VERSION)/g' -i $(distdir)/doc/invoke-*.texi
+	sed 's/\@\@VERSION\@\@/$(VERSION)/g' -i $(distdir)/doc/invoke-*.texi
 	cd $(distdir)/src/ && for i in *.def;do \
 		if test x"$$i" = x"args-std.def";then  continue; fi; \
 		autogen $$i; \
