--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1684,36 +1684,40 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   struct gnutls_tdb_int;
   typedef struct gnutls_tdb_int *gnutls_tdb_t;
   
-  int gnutls_tdb_init(gnutls_tdb_t*);
-  void gnutls_tdb_set_store_func(gnutls_tdb_t, gnutls_tdb_store_func);
-  void gnutls_tdb_set_store_commitment_func(gnutls_tdb_t, gnutls_tdb_store_commitment_func);
-  void gnutls_tdb_set_verify_func(gnutls_tdb_t, gnutls_tdb_verify_func);
-  void gnutls_tdb_deinit(gnutls_tdb_t);
+  int gnutls_tdb_init (gnutls_tdb_t *tdb);
+  void gnutls_tdb_set_store_func (gnutls_tdb_t tdb,
+				  gnutls_tdb_store_func store);
+  void gnutls_tdb_set_store_commitment_func (gnutls_tdb_t tdb,
+				     gnutls_tdb_store_commitment_func cstore);
+  void gnutls_tdb_set_verify_func (gnutls_tdb_t tdb,
+				   gnutls_tdb_verify_func verify);
+  void gnutls_tdb_deinit (gnutls_tdb_t tdb);
 
-  int gnutls_verify_stored_pubkey(const char* db_name, 
-                            gnutls_tdb_t,
-                            const char* host,
-                            const char* service,
-                            gnutls_certificate_type_t cert_type,
-                            const gnutls_datum_t * cert, unsigned int flags);
+  int gnutls_verify_stored_pubkey (const char* db_name,
+				   gnutls_tdb_t tdb,
+				   const char* host,
+				   const char* service,
+				   gnutls_certificate_type_t cert_type,
+				   const gnutls_datum_t * cert,
+				   unsigned int flags);
 
-  int gnutls_store_commitment(const char* db_name,
-                    gnutls_tdb_t,
-                    const char* host,
-                    const char* service,
-                    gnutls_digest_algorithm_t hash_algo,
-                    const gnutls_datum_t* hash,
-                    time_t expiration,
-                    unsigned int flags);
+  int gnutls_store_commitment (const char* db_name,
+			       gnutls_tdb_t tdb,
+			       const char* host,
+			       const char* service,
+			       gnutls_digest_algorithm_t hash_algo,
+			       const gnutls_datum_t* hash,
+			       time_t expiration,
+			       unsigned int flags);
 
-  int gnutls_store_pubkey(const char* db_name,
-                    gnutls_tdb_t,
-                    const char* host,
-                    const char* service,
-                    gnutls_certificate_type_t cert_type,
-                    const gnutls_datum_t * cert, 
-                    time_t expiration,
-                    unsigned int flags);
+  int gnutls_store_pubkey (const char* db_name,
+			   gnutls_tdb_t tdb,
+			   const char* host,
+			   const char* service,
+			   gnutls_certificate_type_t cert_type,
+			   const gnutls_datum_t * cert,
+			   time_t expiration,
+			   unsigned int flags);
 
 
   /* Gnutls error codes. The mapping to a TLS alert is also shown in
