Added missing files.

--- a/tests/srp/Makefile.am
+++ b/tests/srp/Makefile.am
@@ -19,6 +19,8 @@
 # along with this file; if not, write to the Free Software Foundation,
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
+EXTRA_DIST = tpasswd tpasswd.conf
+
 AM_CFLAGS = $(WARN_CFLAGS) $(WERROR_CFLAGS)
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/tests			\
