--- a/lib/accelerated/x86/Makefile.am
+++ b/lib/accelerated/x86/Makefile.am
@@ -42,30 +42,30 @@ AM_CFLAGS += -DASM_X86_64 -DASM_X86
 libx86_la_SOURCES += aes-gcm-x86.c
 
 if WINDOWS
-libx86_la_SOURCES += asm-coff/appro-aes-x86-64-coff.s asm-coff/padlock-x86-64-coff.s asm-coff/cpuid-x86-64-coff.s asm-coff/appro-aes-gcm-x86-64-coff.s
+libx86_la_SOURCES += coff/appro-aes-x86-64-coff.s coff/padlock-x86-64-coff.s coff/cpuid-x86-64-coff.s coff/appro-aes-gcm-x86-64-coff.s
 endif
 
 if MACOSX
-libx86_la_SOURCES += asm-macosx/appro-aes-x86-64-macosx.s asm-macosx/padlock-x86-64-macosx.s asm-macosx/cpuid-x86-64-macosx.s asm-macosx/appro-aes-gcm-x86-64-macosx.s
+libx86_la_SOURCES += macosx/appro-aes-x86-64-macosx.s macosx/padlock-x86-64-macosx.s macosx/cpuid-x86-64-macosx.s macosx/appro-aes-gcm-x86-64-macosx.s
 endif
 
 if ELF
-libx86_la_SOURCES += asm/appro-aes-x86-64.s asm/appro-aes-gcm-x86-64.s asm/padlock-x86-64.s asm/cpuid-x86-64.s
+libx86_la_SOURCES += elf/appro-aes-x86-64.s elf/appro-aes-gcm-x86-64.s elf/padlock-x86-64.s elf/cpuid-x86-64.s
 endif
 
 else #ASM_X86_64
 AM_CFLAGS += -DASM_X86_32 -DASM_X86
 
 if WINDOWS
-libx86_la_SOURCES += asm-coff/appro-aes-x86-coff.s asm-coff/padlock-x86-coff.s asm-coff/cpuid-x86-coff.s
+libx86_la_SOURCES += coff/appro-aes-x86-coff.s coff/padlock-x86-coff.s coff/cpuid-x86-coff.s
 endif
 
 if MACOSX
-libx86_la_SOURCES += asm-macosx/appro-aes-x86-macosx.s asm-macosx/padlock-x86-macosx.s asm-macosx/cpuid-x86-macosx.s
+libx86_la_SOURCES += macosx/appro-aes-x86-macosx.s macosx/padlock-x86-macosx.s macosx/cpuid-x86-macosx.s
 endif
 
 if ELF
-libx86_la_SOURCES += asm/appro-aes-x86.s asm/padlock-x86.s asm/cpuid-x86.s
+libx86_la_SOURCES += elf/appro-aes-x86.s elf/padlock-x86.s elf/cpuid-x86.s
 endif
 
 endif #ASM_X86_64
