--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -280,6 +280,7 @@ APIMANS += gnutls_protocol_get_name.3
 APIMANS += gnutls_session_set_data.3
 APIMANS += gnutls_session_get_data.3
 APIMANS += gnutls_session_get_data2.3
+APIMANS += gnutls_session_get_random.3
 APIMANS += gnutls_session_get_id.3
 APIMANS += gnutls_session_channel_binding.3
 APIMANS += gnutls_session_is_resumed.3
@@ -585,6 +586,7 @@ APIMANS += gnutls_x509_crt_import.3
 APIMANS += gnutls_x509_crt_list_import2.3
 APIMANS += gnutls_x509_crt_list_import.3
 APIMANS += gnutls_x509_crt_export.3
+APIMANS += gnutls_x509_crt_get_private_key_usage_period.3
 APIMANS += gnutls_x509_crt_get_issuer_dn.3
 APIMANS += gnutls_x509_crt_get_issuer_dn_oid.3
 APIMANS += gnutls_x509_crt_get_issuer_dn_by_oid.3
@@ -596,6 +598,7 @@ APIMANS += gnutls_x509_crt_get_signature_algorithm.3
 APIMANS += gnutls_x509_crt_get_signature.3
 APIMANS += gnutls_x509_crt_get_version.3
 APIMANS += gnutls_x509_crt_get_key_id.3
+APIMANS += gnutls_x509_crt_set_private_key_usage_period.3
 APIMANS += gnutls_x509_crt_set_authority_key_id.3
 APIMANS += gnutls_x509_crt_get_authority_key_id.3
 APIMANS += gnutls_x509_crt_get_authority_key_gn_serial.3
@@ -624,6 +627,7 @@ APIMANS += gnutls_x509_crt_get_ca_status.3
 APIMANS += gnutls_x509_crt_get_basic_constraints.3
 APIMANS += gnutls_x509_crt_get_key_usage.3
 APIMANS += gnutls_x509_crt_set_key_usage.3
+APIMANS += gnutls_x509_crt_set_authority_info_access.3
 APIMANS += gnutls_x509_crt_get_proxy.3
 APIMANS += gnutls_x509_dn_oid_known.3
 APIMANS += gnutls_x509_dn_oid_name.3
@@ -742,6 +746,7 @@ APIMANS += gnutls_x509_crq_verify.3
 APIMANS += gnutls_x509_crq_init.3
 APIMANS += gnutls_x509_crq_deinit.3
 APIMANS += gnutls_x509_crq_import.3
+APIMANS += gnutls_x509_crq_get_private_key_usage_period.3
 APIMANS += gnutls_x509_crq_get_dn.3
 APIMANS += gnutls_x509_crq_get_dn_oid.3
 APIMANS += gnutls_x509_crq_get_dn_by_oid.3
@@ -756,6 +761,7 @@ APIMANS += gnutls_x509_crq_get_attribute_by_oid.3
 APIMANS += gnutls_x509_crq_export.3
 APIMANS += gnutls_x509_crt_set_crq.3
 APIMANS += gnutls_x509_crt_set_crq_extensions.3
+APIMANS += gnutls_x509_crq_set_private_key_usage_period.3
 APIMANS += gnutls_x509_crq_set_key_rsa_raw.3
 APIMANS += gnutls_x509_crq_set_subject_alt_name.3
 APIMANS += gnutls_x509_crq_set_key_usage.3
